[package]
name = "quicssh-rs"
version = "0.1.3"
edition = "2021"
license = "MIT"
authors = ["oowl <ouyangjun1999@gmail.com>"]
description = "A simple ssh server based on quic protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.2", features = ["derive"] }
quinn = "0.10.2"
tokio = { version = "1.36.0", features = ["full"] }
url = "2.5.0"
rustls = { version = "0.21.10", features = ["quic","dangerous_configuration"] }
rustls-pemfile = "2.1.1"
rcgen = "0.12.1"
log = { version = "0.4.21", features = ["std", "serde"] }
log4rs = "1.2.0"
