[package]
name = "quicssh-rs"
version = "0.1.5"
edition = "2021"
license = "MIT"
authors = ["oowl <ouyangjun1999@gmail.com>"]
description = "A simple ssh server based on quic protocol"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.28", features = ["derive"] }
quinn = "0.10.2"
tokio = { version = "1.42.0", features = ["full"] }
url = "2.5.2"
rustls = { version = "0.21.12", features = ["quic","dangerous_configuration"] }
rustls-pemfile = "2.1.3"
rcgen = "0.12.1"
log = { version = "0.4.22", features = ["std", "serde"] }
log4rs = "1.2.0"
serde = "1.0.217"
toml = "0.8.19"

[package.metadata.deb]
extended-description = """\
:) quicssh-rs is a QUIC proxy that allows to use QUIC to connect to an SSH server without needing to patch the client or the server."""
section = "net"
priority = "optional"
suggests = "openssh-server"
